# Projeto-JN

./: .gitignore  README.md
back-end/: Dockerfile  main.py  pyproject.toml  requirements.txt  run.py
back-end/app/: database.py  main.py
back-end/app/models/: curso.py  models.py  perfil.py  usuario.py
back-end/app/routers/: auth.py  conteudo.py  courses.py  curso.py  menu.py  modulo.py  perfil.py  permissoes.py  progresso.py  usuario.py
back-end/app/schemas/: conteudo.py  curso.py  login.py  menu.py  modulo.py  perfil.py  permissoes.py  progresso.py  usuario.py
back-end/app/services/: auth.py  conteudo_service.py  curso_service.py  menu_service.py  modulo_service.py  perfil_service.py  permissoes_service.py  progresso_service.py  usuario_service.py
back-end/app/utils/: auth0.py  db.py  jwt.py  password.py
back-end/database/: config.py
back-end/firebase/: config.py
back-end/routers/: auth.py
back-end/schemas/: auth.py
back-end/utils/: password.py
front-end/: firebase.js  package-lock.json  package.json  tailwind.config.js
front-end/app/: globals.css  layout.tsx  page.tsx
front-end/app/Home/: page.tsx
front-end/app/Novasenha/: page.jsx
front-end/app/_components/: Chatbotframe.tsx  Chatbox.tsx  Course-carousel.tsx  HeaderLogin.tsx  Sidebar.tsx  course-card.tsx
front-end/app/certificados/: page.tsx
front-end/app/chatbot/: page.tsx
front-end/app/curso/: page.tsx
front-end/app/explorar-cursos/: page.tsx
front-end/app/loading/: page.tsx
front-end/app/meus-cursos/: page.tsx
front-end/src/app/: globals.css  layout.tsx  page.jsx
front-end/src/app/Dashboard/: page.tsx
front-end/src/app/_components/: HeaderLogin.tsx
front-end/src/app/esqueceusenha/: page.jsx
front-end/src/services/: api.js  auth.ts  authService.js
